fix z-index

--- a/app/assets/scss/deep.scss
+++ b/app/assets/scss/deep.scss
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 20;
+  z-index: 9;
   background: black;
   opacity: 0;
   transition: opacity 0.2s;
